Tests/typing/good/testfile-nothing-1.jl
function f(x::Nothing) end
