Tests/typing/bad/testfile-struct-2.jl

struct S a end
function f(x::Int64) x.a end
